--- a/week2/report2.tex
+++ b/week2/report2.tex
@@ -3,6 +3,7 @@
 \usepackage[dvipdfmx]{graphicx}
 \usepackage{comment}
 \usepackage{listings,jvlisting}
+\usepackage{url}
 \lstset{
   basicstyle={\ttfamily},
   identifierstyle={\small},
@@ -160,6 +161,9 @@ int main(){
 }
 \end{lstlisting}
 
+\section*{課題３の実行結果}
+
+\newpage
 \section*{課題４（二分探索木）}
 入力として整数（int型）のデータが与えられ、これらのデータには同じ整数が重複して出現してもよいものとする。
 このとき、ポインタによる二分探索木を実現して、整数データを二分探索木に挿入した後、この二分探索木に挿入されたデータを取り出して、データを照準（厳密には非減少順）に出力するCのプログラムを作成した。
@@ -284,11 +288,11 @@ int main(){
 }
 \end{lstlisting}
 
-
+\section*{課題４の実行結果}
 
 \newpage
 \begin{thebibliography}{99}
-  \bibitem{cite1} Name, URL
+  \bibitem{cite1} 第2回　動的データ構造と再起処理（スタック、二分木）, \\URL : \url{https://www.ied.inf.uec.ac.jp/text/laboratory/C/second_week/index02.html}
 \end{thebibliography}
 
 
