--- a/week2/report2.tex
+++ b/week2/report2.tex
@@ -158,7 +158,7 @@
     
             if(isOperator(previousChar, input[track])){ // 単項演算子の判定を行います
                 track++;
-                push('~', &stack);
+                push('-', &stack);
                 push(input[track], &stack);
                 previousChar = input[track]; // 前の文字を更新します
                 track++;
@@ -200,12 +200,15 @@
 \end{lstlisting}
 
 \section*{課題３の実行結果}
-\noindent1.中置記法の算術式：A=(B-C/D+E)*F、実行結果：ABCD/-E+F*=\\
-2.中置記法の算術式：A=B-(C/D+E)*F、実行結果：ABCD/E+F*-=\\
-3.中置記法の算術式：A=B-C/(D+E*F)、実行結果：ABCDEF*+/-=\\
-4.中置記法の算術式：A=((-B)-(-C)/(-D)+(-E))*(-F)、実行結果：AB-C-D-/-E-+F-*=\\
-5.中置記法の算術式：A=B-((-C)/(-D)+(-E))*(-F)、実行結果：ABC-D-/E-+F-*-=\\
-6.中置記法の算術式：A=B-(-C)/((-D)+(-E)*(-F))、実行結果：ABC-D-E-F-*+/-=\\
+\noindent\textbf{次の(1)〜(3)の中置記法の算術式に対する実行結果を求めた。}\\
+\textbf{1.中置記法の算術式：}A=(B-C/D+E)*F\textbf{、実行結果：}ABCD/-E+F*=\\
+\textbf{2.中置記法の算術式}：A=B-(C/D+E)*F\textbf{、実行結果：}ABCD/E+F*-=\\
+\textbf{3.中置記法の算術式}：A=B-C/(D+E*F)\textbf{、実行結果：}ABCDEF*+/-=\\
+
+\noindent\textbf{単項演算子の加減算を追加した場合、次の（４）〜（６）の中置記法の算術式に対する実行結果を求めた。}\\
+\textbf{4.中置記法の算術式：}A=((-B)-(-C)/(-D)+(-E))*(-F)\textbf{、実行結果：}AB-C-D-/-E-+F-*=\\
+\textbf{5.中置記法の算術式：}A=B-((-C)/(-D)+(-E))*(-F)\textbf{、実行結果：}ABC-D-/E-+F-*-=\\
+\textbf{6.中置記法の算術式：}A=B-(-C)/((-D)+(-E)*(-F))\textbf{、実行結果：}ABC-D-E-F-*+/-=\\
 
 \newpage
 \section*{課題４（二分探索木）}
@@ -216,178 +219,466 @@
 最後に、データの削除も行えるように改良した。\\
 
 \begin{lstlisting}[caption={binarySearchTree.c}]
-#include <stdio.h>
-#include <stdlib.h>
-
-#define TRUE 1
-#define FALSE 0
-#define SUCCESS 1
-#define FAILURE 0
-
-typedef int data_type;
-typedef int freq_type;
-
-// ノードの構造を定義するための構造体です。
-typedef struct node_tag {
-    data_type data;
-    freq_type freq;
-    struct node_tag *left;
-    struct node_tag *right;
-} node_type;
-
-// 引数として与えられたノードのポインタをNULLに初期化します
-void initialize(node_type **pp) {
-    *pp = NULL;
-}
-
-// 指定された値が二分探索木に存在するかどうかを判定します
-int is_member(data_type x, node_type *p) {
-    if (p == NULL) return FALSE;
-    else {
-        if(x == p->data) return TRUE;
+    #include <stdio.h>
+    #include <stdlib.h>
+    
+    #define TRUE 1
+    #define FALSE 0
+    #define SUCCESS 1
+    #define FAILURE 0
+    
+    typedef int data_type;
+    typedef int freq_type;
+    
+    // ノードの構造を定義するための構造体です。
+    typedef struct node_tag {
+        data_type data;
+        freq_type freq;
+        struct node_tag *left;
+        struct node_tag *right;
+    } node_type;
+    
+    // 引数として与えられたノードのポインタをNULLに初期化します
+    void initialize(node_type **pp) {
+        *pp = NULL;
+    }
+    
+    // 指定された値が二分探索木に存在するかどうかを判定します
+    int is_member(data_type x, node_type *p) {
+        if (p == NULL) return FALSE;
         else {
-            if (x < p->data) return is_member(x, p->left);
-            else return is_member(x, p->right);
+            if(x == p->data) return TRUE;
+            else {
+                if (x < p->data) return is_member(x, p->left);
+                else return is_member(x, p->right);
+            }
         }
     }
-}
-
-// 与えられたノードの中で最小値を探します
-data_type min(node_type *p) {
-    while (p->left != NULL) {
-        p = p->left;
+    
+    // 与えられたノードの中で最小値を探します
+    data_type min(node_type *p) {
+        while (p->left != NULL) {
+            p = p->left;
+        }
+        return p->data;
     }
-    return p->data;
-}
-
-// 新しいノードを作成します
-node_type *new_node(data_type x) {
-    node_type *temp = (node_type *)malloc(sizeof(node_type));
-    if (temp == NULL) return NULL; // メモリが割り当てられなかった場合
-    else {
-        temp -> data = x; // データを設定
-        temp -> freq = 1; // データの出現回数を設定
-        temp -> left = NULL; // 左の子ノードをNULLに設定
-        temp -> right = NULL; // 右の子ノードをNULLに設定
-        return temp; // 新しいノードを返す
-    }
-}
-
-// 二分探索木にデータを挿入します
-int insert (data_type x, node_type **pp) {
-    if (*pp == NULL) { // ノードが空の場合
-        node_type *temp = new_node(x);
-        if (temp == NULL) return FAILURE;
-        *pp = temp;
-        return SUCCESS;
-    } else { // ノードが空でない場合
-        if (x < (*pp)->data) return insert (x, &((*pp)->left)); // 左の子ノードに挿入
-        else if (x > (*pp)->data) return insert(x, &((*pp)->right)); // 右の子ノードに挿入
+    
+    // 新しいノードを作成します
+    node_type *new_node(data_type x) {
+        node_type *temp = (node_type *)malloc(sizeof(node_type));
+        if (temp == NULL) return NULL; // メモリが割り当てられなかった場合
         else {
-            (*pp)->freq++; // 既に存在するデータの出現回数を増やす
-            return SUCCESS;
+            temp -> data = x; // データを設定
+            temp -> freq = 1; // データの出現回数を設定
+            temp -> left = NULL; // 左の子ノードをNULLに設定
+            temp -> right = NULL; // 右の子ノードをNULLに設定
+            return temp; // 新しいノードを返す
         }
     }
-}
-
-// 二分探索木からデータを削除します
-int delete (data_type x, node_type **pp) {
-    if (*pp == NULL) return FAILURE; // ノードが空の場合
-    else if (x < (*pp)->data) { // 左の子ノードを探索
-        return delete(x, &((*pp)->left));
-    } else if (x > (*pp)->data) { // 右の子ノードを探索
-        return delete(x, &((*pp)->right));
-    } else { // ノードが見つかった場合
-        if ((*pp)->left == NULL && (*pp)->right == NULL) { // 子ノードがない場合
-            free(*pp);
-            *pp = NULL;
+    
+    // 二分探索木にデータを挿入します
+    int insert (data_type x, node_type **pp) {
+        if (*pp == NULL) { // ノードが空の場合
+            node_type *temp = new_node(x);
+            if (temp == NULL) return FAILURE;
+            *pp = temp;
             return SUCCESS;
-        } else if ((*pp)->left == NULL) { // 左の子ノードがない場合
-            node_type *temp = *pp;
-            *pp = (*pp)->right;
-            free(temp);
-            return SUCCESS;
-        } else if ((*pp)->right == NULL) { // 右の子ノードがない場合
-            node_type *temp = *pp;
-            *pp = (*pp)->left;
-            free(temp);
-            return SUCCESS;
-        } else { // 両方の子ノードがある場合
-            (*pp)->data = min((*pp)->right); // 右の子ノードの最小値を取得
-            return delete((*pp)->data, &((*pp)->right)); // 右の子ノードから最小値を削除
+        } else { // ノードが空でない場合
+            if (x < (*pp)->data) return insert (x, &((*pp)->left)); // 左の子ノードに挿入
+            else if (x > (*pp)->data) return insert(x, &((*pp)->right)); // 右の子ノードに挿入
+            else {
+                (*pp)->freq++; // 既に存在するデータの出現回数を増やす
+                return SUCCESS;
+            }
         }
     }
-}
-
-// 二分探索木を中順で出力します
-void print_in_order(node_type *p) {
-    if(p != NULL) { // ノードが空でない場合
-        print_in_order(p->left);
-        for (int i = 0; i < p->freq; i++){ // 出現回数分だけデータを出力
-            printf("%d ", p->data); // データを出力
-        }
-        print_in_order(p->right); // 右の子ノードを探索
-    }
-}
-
-// プログラム終了時に、動的に割り当てたメモリを開放する処理
-void free_tree(node_type *p) {
-    if (p != NULL) {
-        free_tree(p->left); // 左の子ノードを開放
-        free_tree(p->right); // 右の子ノードを開放
-        free(p); // ノードを開放
-    }
-}
-
-int main(){
-    node_type *root; // 二分探索木のルートノード
-    initialize(&root); // ルートノードを初期化
-    int choice, x; // ユーザーの選択とデータを格納する変数
-
-    while(TRUE) { // ユーザーが終了するまで繰り返す
-        printf("\n1. Insert\n2. Delete\n3. Exit\nEnter your choice: "); 
-        scanf("%d", &choice);
-
-        switch(choice) {
-            case 1: // 挿入
-                printf("Enter the number to insert: ");
-                scanf("%d", &x);
-                if (insert(x, &root) == SUCCESS) {
-                    printf("========================\nInsertion was successful\n");
-                    printf("Tree contents: \n");
-                    print_in_order(root);
-                    printf("\n========================\n");
-                } else {
-                    printf("Insertion failed\n");
-                }
-                break;
-            case 2: // 削除
-                printf("Enter the number to delete: ");
-                scanf("%d", &x);
-                int result = delete(x, &root);
-                if (delete(x, &root) == SUCCESS) {
-                    printf("========================\nDeletion was successful\n");
-                    printf("Tree contents: \n");
-                    print_in_order(root);
-                    printf("\n========================\n");
-                } else if (result == FAILURE) {
-                    printf("NUMBER NOT FOUND\n");
-                } else {
-                    printf("Deletion failed\n");
-                }
-                break;
-            case 3: // 終了
-                printf("========================\nExiting the program.\n========================\n");
-                free_tree(root);
-                return 0;
-            default: // 1, 2, 3 以外の場合
-                printf("Invalid choice. Please enter 1, 2, or 3.\n");
+    
+    // 二分探索木からデータを削除します
+    int delete (data_type x, node_type **pp) {
+        if (*pp == NULL) return FAILURE; // ノードが空の場合
+        else if (x < (*pp)->data) { // 左の子ノードを探索
+            return delete(x, &((*pp)->left));
+        } else if (x > (*pp)->data) { // 右の子ノードを探索
+            return delete(x, &((*pp)->right));
+        } else { // ノードが見つかった場合
+            if ((*pp)->left == NULL && (*pp)->right == NULL) { // 子ノードがない場合
+                free(*pp);
+                *pp = NULL;
+                return SUCCESS;
+            } else if ((*pp)->left == NULL) { // 左の子ノードがない場合
+                node_type *temp = *pp;
+                *pp = (*pp)->right;
+                free(temp);
+                return SUCCESS;
+            } else if ((*pp)->right == NULL) { // 右の子ノードがない場合
+                node_type *temp = *pp;
+                *pp = (*pp)->left;
+                free(temp);
+                return SUCCESS;
+            } else { // 両方の子ノードがある場合
+                (*pp)->data = min((*pp)->right); // 右の子ノードの最小値を取得
+                return delete((*pp)->data, &((*pp)->right)); // 右の子ノードから最小値を削除
+            }
         }
     }
-}
+    
+    // 二分探索木を中順で出力します
+    void print_in_order(node_type *p) {
+        if(p != NULL) { // ノードが空でない場合
+            print_in_order(p->left);
+            for (int i = 0; i < p->freq; i++){ // 出現回数分だけデータを出力
+                printf("%d ", p->data); // データを出力
+            }
+            print_in_order(p->right); // 右の子ノードを探索
+        }
+    }
+    
+    // プログラム終了時に、動的に割り当てたメモリを開放する処理
+    void free_tree(node_type *p) {
+        if (p != NULL) {
+            free_tree(p->left); // 左の子ノードを開放
+            free_tree(p->right); // 右の子ノードを開放
+            free(p); // ノードを開放
+        }
+    }
+    
+    int main(){
+        node_type *root; // 二分探索木のルートノード
+        initialize(&root); // ルートノードを初期化
+        int choice, x; // ユーザーの選択とデータを格納する変数
+    
+        while(TRUE) { // ユーザーが終了するまで繰り返す
+            printf("\n1. Insert\n2. Delete\n3. Exit\nEnter your choice: "); 
+            scanf("%d", &choice);
+    
+            switch(choice) {
+                case 1: // 挿入
+                    printf("Enter the number to insert: ");
+                    scanf("%d", &x);
+                    if (insert(x, &root) == SUCCESS) {
+                        printf("========================\nInsertion was successful\n");
+                        printf("Tree contents: ");
+                        print_in_order(root);
+                        printf("\n========================\n");
+                    } else {
+                        printf("Insertion failed\n");
+                    }
+                    break;
+                case 2: // 削除
+                    printf("Enter the number to delete: ");
+                    scanf("%d", &x);
+                    int result = delete(x, &root);
+                    if (result == SUCCESS) {
+                        printf("========================\nDeletion was successful\n");
+                        printf("Tree contents: ");
+                        print_in_order(root);
+                        printf("\n========================\n");
+                    } else if (result == FAILURE) {
+                        printf("NUMBER NOT FOUND\n");
+                    } else {
+                        printf("Deletion failed\n");
+                    }
+                    break;
+                case 3: // 終了
+                    printf("========================\nExiting the program.\n========================\n");
+                    free_tree(root);
+                    return 0;
+                default: // 1, 2, 3 以外の場合
+                    printf("Invalid choice. Please enter 1, 2, or 3.\n");
+            }
+        }
+    }
 \end{lstlisting}
 
 \section*{課題４の実行結果}
+\noindent\textbf{プログラムの実行結果にはいくつかの例を載せる。}\\
+\textbf{例1.挿入23, 挿入50, 挿入34, 挿入56, 挿入98, 挿入1, 挿入15, 挿入29, 挿入33, 挿入40}\\
+\textbf{実行結果：}\\
+1. Insert
+2. Delete
+3. Exit
+Enter your choice: 1
+Enter the number to insert: 23\\
+========================\\
+Insertion was successful
+Tree contents: 23 \\
+========================
+
+1. Insert
+2. Delete
+3. Exit
+Enter your choice: 1
+Enter the number to insert: 50\\
+========================\\
+Insertion was successful
+Tree contents: 23 50 \\
+========================
+
+1. Insert
+2. Delete
+3. Exit
+Enter your choice: 1
+Enter the number to insert: 34\\
+========================\\
+Insertion was successful
+Tree contents: 23 34 50 \\
+========================
+
+1. Insert
+2. Delete
+3. Exit
+Enter your choice: 1
+Enter the number to insert: 56\\
+========================\\
+Insertion was successful
+Tree contents: 23 34 50 56 \\
+========================
+
+1. Insert
+2. Delete
+3. Exit
+Enter your choice: 1
+Enter the number to insert: 98\\
+========================\\
+Insertion was successful
+Tree contents: 23 34 50 56 98 \\
+========================
+
+1. Insert
+2. Delete
+3. Exit
+Enter your choice: 1
+Enter the number to insert: 1\\
+========================\\
+Insertion was successful
+Tree contents: 1 23 34 50 56 98 \\
+========================
+
+1. Insert
+2. Delete
+3. Exit
+Enter your choice: 1
+Enter the number to insert: 15\\
+========================\\
+Insertion was successful
+Tree contents: 1 15 23 34 50 56 98 \\
+========================
+
+1. Insert
+2. Delete
+3. Exit
+Enter your choice: 1
+Enter the number to insert: 29\\
+========================\\
+Insertion was successful
+Tree contents: 1 15 23 29 34 50 56 98 \\
+========================
+
+1. Insert
+2. Delete
+3. Exit
+Enter your choice: 1
+Enter the number to insert: 33\\
+========================\\
+Insertion was successful
+Tree contents: 1 15 23 29 33 34 50 56 98 \\
+========================
+
+1. Insert
+2. Delete
+3. Exit
+Enter your choice: 1
+Enter the number to insert: 40\\
+========================\\
+Insertion was successful
+Tree contents: 1 15 23 29 33 34 40 50 56 98 \\
+========================
+\vspace*{3\baselineskip}
+
+\noindent\textbf{例２.挿入１、挿入２、挿入３、挿入４、挿入５、挿入４、挿入３、挿入２、挿入１、挿入４ （度数を保持する）}\\
+\textbf{実行結果：}\\
+1. Insert
+2. Delete
+3. Exit
+Enter your choice:  1
+Enter the number to insert: 1\\
+========================\\
+Insertion was successful
+Tree contents: 1 \\
+========================
+
+1. Insert
+2. Delete
+3. Exit
+Enter your choice: 1
+Enter the number to insert: 2\\
+========================\\
+Insertion was successful
+Tree contents: 1 2 \\
+========================
+
+1. Insert
+2. Delete
+3. Exit
+Enter your choice: 1
+Enter the number to insert: 3\\
+========================\\
+Insertion was successful
+Tree contents: 1 2 3 \\
+========================
+
+1. Insert
+2. Delete
+3. Exit
+Enter your choice: 1
+Enter the number to insert: 4\\
+========================\\
+Insertion was successful
+Tree contents: 1 2 3 4 \\
+========================
+
+1. Insert
+2. Delete
+3. Exit
+Enter your choice: 1
+Enter the number to insert: 5\\
+========================\\
+Insertion was successful
+Tree contents: 1 2 3 4 5 \\
+========================
+
+1. Insert
+2. Delete
+3. Exit
+Enter your choice: 1
+Enter the number to insert: 4\\
+========================\\
+Insertion was successful
+Tree contents: 1 2 3 4 4 5\\ 
+========================
+
+1. Insert
+2. Delete
+3. Exit
+Enter your choice: 1
+Enter the number to insert: 3\\
+========================\\
+Insertion was successful
+Tree contents: 1 2 3 3 4 4 5 \\
+========================
+
+1. Insert
+2. Delete
+3. Exit
+Enter your choice: 1
+Enter the number to insert: 2\\
+========================\\
+Insertion was successful
+Tree contents: 1 2 2 3 3 4 4 5 \\
+========================
+
+1. Insert
+2. Delete
+3. Exit
+Enter your choice: 1
+Enter the number to insert: 1\\
+========================\\
+Insertion was successful
+Tree contents: 1 1 2 2 3 3 4 4 5 \\
+========================
+
+1. Insert
+2. Delete
+3. Exit
+Enter your choice: 1
+Enter the number to insert: 4\\
+========================\\
+Insertion was successful
+Tree contents: 1 1 2 2 3 3 4 4 4 5 \\
+========================
+\vspace*{3\baselineskip}
+
+\noindent\textbf{例３.挿入１０、挿入２０、挿入３０、削除１０、挿入４０、挿入５０、挿入６０、削除２０ （データの削除）}
+実行結果：\\
+1. Insert
+2. Delete
+3. Exit
+Enter your choice: 1
+Enter the number to insert: 10\\
+========================\\
+Insertion was successful
+Tree contents: 10 \\
+========================
+
+1. Insert
+2. Delete
+3. Exit
+Enter your choice: 1
+Enter the number to insert: 20\\
+========================\\
+Insertion was successful
+Tree contents: 10 20 \\
+========================
+
+1. Insert
+2. Delete
+3. Exit
+Enter your choice: 1
+Enter the number to insert: 30\\
+========================\\
+Insertion was successful
+Tree contents: 10 20 30 \\
+========================
+
+1. Insert
+2. Delete
+3. Exit
+Enter your choice: 2
+Enter the number to delete: 10\\
+========================\\
+Deletion was successful
+Tree contents: 20 30 \\
+========================
+
+1. Insert
+2. Delete
+3. Exit
+Enter your choice: 1
+Enter the number to insert: 40\\
+========================\\
+Insertion was successful
+Tree contents: 20 30 40 \\
+========================
+
+1. Insert
+2. Delete
+3. Exit
+Enter your choice: 1
+Enter the number to insert: 50\\
+========================\\
+Insertion was successful
+Tree contents: 20 30 40 50 \\
+========================
+
+1. Insert
+2. Delete
+3. Exit
+Enter your choice: 1
+Enter the number to insert: 60\\
+========================\\
+Insertion was successful
+Tree contents: 20 30 40 50 60 \\
+========================
+
+1. Insert
+2. Delete
+3. Exit
+Enter your choice: 2
+Enter the number to delete: 20\\
+========================\\
+Deletion was successful
+Tree contents: 30 40 50 60 \\
+========================
 
 \newpage
 \begin{thebibliography}{99}
