--- a/week3/report3.tex
+++ b/week3/report3.tex
@@ -24,661 +24,22 @@
 }
 \renewcommand{\lstlistingname}{ソースコード}
 
-\title{\vspace{-3cm} プログラミング言語実験・C言語　第２回課題レポート}
+\title{\vspace{-3cm} プログラミング言語実験・C言語　第３回課題レポート}
 \author{I類 メディア情報学 \\\textbf{氏名：}LEORA DAVID\\\textbf{学籍番号：}2210745}
-\date{2024年04月24日}
+\date{2024年04月29日}
 
 \begin{document}
 \maketitle
-\section*{課題３（逆ポーランド記法）}
-被演算数、演算子、および括弧のトークンで構成された中置記法の算術式を読み込み、スタックを用いて逆ポーランド記法の式を出力するCプログラムを作成した。
-それから、次の（１）〜（３）の中置記法の算術式に対する実行結果を求めた。\\
-\hspace*{1cm}(1) A = ( B - C / D + E ) * F\\
-\hspace*{1cm}(2) A = B - ( C / D + E ) * F\\
-\hspace*{1cm}(3) A = B - C / ( D + E * F )\\
-また、プログラム中で使用する演算子は、二項演算しの加算「+」、減算「-」、乗算「*」、除算「/」、および代入「=」だけに限定することにした。
-最後に、単項演算子の加減算を追加した。\\
+\section*{課題５（コンピュータ大貧民プログラムの実行状況のスクリーンショット）}
+大貧民サーバを起動し、大貧民標準クライアント（tndhm_devkit_c-20180826.tar.gzに同梱されている方）を５台起動する。\\
+サーバの実行画面（クライアント名が default と表示されている対戦画面）とグラフの画面（棒グラフか線グラフ）の計２画面のスクリーンショットを撮った。\\
 
-\begin{lstlisting}[caption={reversePolishNotation.c}]
-    #include <stdio.h>
-    #include <stdlib.h>
-    #include <string.h>
-    
-    #define SIZE 100
-    #define TRUE 1
-    #define FALSE 0
-    #define SUCCESS 1
-    #define FAILURE 0
-    
-    typedef char data_type;
-    typedef struct node_tag {
-        data_type data;
-        struct node_tag *next;
-    } node_type;
-    
-    // スタックを初期化します
-    void initialize(node_type **pp){
-        *pp = NULL; // スタックの先頭を NULL に設定します（空の状態にします）
-    }
-    
-    // スタックが空かどうかを確認します
-    int is_empty(node_type *p){
-        return (p == NULL) ? TRUE : FALSE;
-    }
-    
-    // スタックの先頭にあるデータを取得します
-    data_type top(node_type *p){
-        if (is_empty(p)){ // スタックが空の場合、NULL文字を返します
-            printf("スタックは空です\n");
-            return '\0'; 
-        }
-        return p->data; // 空出ない場合、先頭のデータを返します
-    }
-    
-    // 新しいノードを作成し、スタックに追加します
-    node_type *new_node(data_type x, node_type *next) {
-        node_type *temp = (node_type *)malloc(sizeof(node_type));
-        if (temp != NULL) { // メモリの割り当てが成功した場合、データを設定し、次のノードを設定します
-            temp->data = x;
-            temp->next = next;
-        }
-        return temp;
-    }
-    
-    // スタックにデータを追加します
-    int push(data_type x, node_type **pp){
-        node_type *temp = new_node(x, *pp); // 新しいノードを作成します
-        if (temp == NULL) return FAILURE;
-        *pp = temp; // スタックの先頭を新しいノードに設定します
-        return SUCCESS;
-    }
-    
-    // スタックからデータをポップします
-    int pop(node_type **pp)
-    {
-        node_type *temp;
-    
-        if (!is_empty(*pp)){ // スタックが空でない場合、先頭のノードを削除します
-            temp = (*pp)->next; // 次のノードを一時的に保存します
-            free(*pp); // 現在の先頭のノードを削除します
-            *pp = temp; // スタックの先頭を次のノードに設定します
-            return SUCCESS;
-        }
-        return FAILURE;
-    }
-    
-    // 与えられた演算子の優先順位を返します
-    int checkPriority(char a){
-        int priority;
-        switch (a) {
-            case '=':
-                return 0;
-            case ')' :
-                return 1;
-            case '+' :
-                return 2;
-            case '-' :
-                return 2;
-            case '*' :
-                return 3;
-            case '/' : 
-                return 3;
-            case '(' : 
-                return 4;
-            default:
-                return 5;
-            }
-    }
-    
-    // 現在の文字が単項演算子かどうかを確認します
-    int isOperator(char previous, char current){
-        // 前の文字が演算子または開き括弧であり、現在の文字が単項演算子の場合、TRUE を返します
-        if ((previous == '=' || previous == '(' || previous == '+' || previous == '-' || previous == '*' || previous == '/') && (current == '-')) {
-            return TRUE;
-        } else return FALSE;
-    }
-    
-    int main() {
-        node_type *stack; // スタックを宣言します
-        initialize(&stack); // スタックを初期化します
-        char input[SIZE], previousChar = 0; // 入力文字列と前の文字を格納する変数を宣言します
-        int track = 0; // 入力文字列の位置を追跡する変数を宣言します
-    
-        printf("式を入力してください：\n");
-        fgets(input, SIZE, stdin); // 入力文字列を取得します
-        int len = strlen(input); 
-        if(input[len-1] == '\n') // 改行文字を削除します
-            input[len-1] = '\0'; // NULL文字に置き換えます
-    
-        while (input[track] != '\0') { // 入力文字列の終わりに達するまで繰り返します
-            if(input[track] == ' '){ // 空白文字をスキップします
-                track++;
-                continue;
-            }
-    
-            if(isOperator(previousChar, input[track])){ // 単項演算子の判定を行います
-                track++;
-                push('-', &stack);
-                push(input[track], &stack);
-                previousChar = input[track]; // 前の文字を更新します
-                track++;
-                continue;
-            }
-    
-            // スタックの先頭にある演算子の優先順位が現在の文字の優先順位よりも高い場合、スタックから演算子を取り出し、出力します
-            while(!is_empty(stack) && top(stack) != '(' && checkPriority(input[track]) <= checkPriority(top(stack))) {
-                printf("%c", top(stack));
-                pop(&stack);
-            }
-    
-            // 現在の文字が閉じ括弧の場合、開き括弧が見つかるまでスタックから演算子を取り出し、出力します
-            if (input[track] != ')') {
-                push(input[track], &stack);
-            } 
-            else { // 閉じ括弧が見つかった場合、開き括弧が見つかるまでスタックから演算子を取り出し、出力します
-                while (!is_empty(stack) && top(stack) != '('){
-                    printf("%c", top(stack));
-                    pop(&stack);
-                }
-                if (!is_empty(stack) && top(stack) == '(') {
-                    pop(&stack);
-                }
-            }
-            previousChar = input[track]; // 前の文字を更新します
-            track++;
-        }
-    
-        while(!is_empty(stack)){ // スタックに残っている演算子を取り出し、出力します
-            if(top(stack) != '\0') {
-                printf("%c", top(stack));
-            }
-            pop(&stack);
-        }
-        printf("\n");
-        return 0;
-    }
-\end{lstlisting}
+\section*{課題６（ペア出し機能の実装）}
+コンピュータ大貧民教育用クライアント（tndhmc-0.03.tar.gz）のディレクトリ src にある、select_cards.c などを改変し、ペア出し機能を実現した。
+この課題では、場にカードがない状況で、かつ提出するカードにジョーカーを含まない場合について実装した。
 
-\section*{課題３の実行結果}
-\noindent\textbf{次の(1)〜(3)の中置記法の算術式に対する実行結果を求めた。}\\
-\textbf{1.中置記法の算術式：}A=(B-C/D+E)*F\textbf{、実行結果：}ABCD/-E+F*=\\
-\textbf{2.中置記法の算術式}：A=B-(C/D+E)*F\textbf{、実行結果：}ABCD/E+F*-=\\
-\textbf{3.中置記法の算術式}：A=B-C/(D+E*F)\textbf{、実行結果：}ABCDEF*+/-=\\
-
-\noindent\textbf{単項演算子の加減算を追加した場合、次の（４）〜（６）の中置記法の算術式に対する実行結果を求めた。}\\
-\textbf{4.中置記法の算術式：}A=((-B)-(-C)/(-D)+(-E))*(-F)\textbf{、実行結果：}AB-C-D-/-E-+F-*=\\
-\textbf{5.中置記法の算術式：}A=B-((-C)/(-D)+(-E))*(-F)\textbf{、実行結果：}ABC-D-/E-+F-*-=\\
-\textbf{6.中置記法の算術式：}A=B-(-C)/((-D)+(-E)*(-F))\textbf{、実行結果：}ABC-D-E-F-*+/-=\\
-
-\newpage
-\section*{課題４（二分探索木）}
-入力として整数（int型）のデータが与えられ、これらのデータには同じ整数が重複して出現してもよいものとする。
-このとき、ポインタによる二分探索木を実現して、整数データを二分探索木に挿入した後、この二分探索木に挿入されたデータを取り出して、データを照準（厳密には非減少順）に出力するCのプログラムを作成した。
-ただし、同じ値の整数データが複数存在する場合には、入力時と同じ個数分出力することにした。\\
-\\ここで、ポインタによる二分探索木の実現に際して、各ノードは、整数データを保持する int 型変数 data と、その整数が出現した頻度（度数）を保持する int 型変数 frequency をもつものとする。
-最後に、データの削除も行えるように改良した。\\
-
-\begin{lstlisting}[caption={binarySearchTree.c}]
-    #include <stdio.h>
-    #include <stdlib.h>
-    
-    #define TRUE 1
-    #define FALSE 0
-    #define SUCCESS 1
-    #define FAILURE 0
-    
-    typedef int data_type;
-    typedef int freq_type;
-    
-    // ノードの構造を定義するための構造体です。
-    typedef struct node_tag {
-        data_type data;
-        freq_type freq;
-        struct node_tag *left;
-        struct node_tag *right;
-    } node_type;
-    
-    // 引数として与えられたノードのポインタをNULLに初期化します
-    void initialize(node_type **pp) {
-        *pp = NULL;
-    }
-    
-    // 指定された値が二分探索木に存在するかどうかを判定します
-    int is_member(data_type x, node_type *p) {
-        if (p == NULL) return FALSE;
-        else {
-            if(x == p->data) return TRUE;
-            else {
-                if (x < p->data) return is_member(x, p->left);
-                else return is_member(x, p->right);
-            }
-        }
-    }
-    
-    // 与えられたノードの中で最小値を探します
-    data_type min(node_type *p) {
-        while (p->left != NULL) {
-            p = p->left;
-        }
-        return p->data;
-    }
-    
-    // 新しいノードを作成します
-    node_type *new_node(data_type x) {
-        node_type *temp = (node_type *)malloc(sizeof(node_type));
-        if (temp == NULL) return NULL; // メモリが割り当てられなかった場合
-        else {
-            temp -> data = x; // データを設定
-            temp -> freq = 1; // データの出現回数を設定
-            temp -> left = NULL; // 左の子ノードをNULLに設定
-            temp -> right = NULL; // 右の子ノードをNULLに設定
-            return temp; // 新しいノードを返す
-        }
-    }
-    
-    // 二分探索木にデータを挿入します
-    int insert (data_type x, node_type **pp) {
-        if (*pp == NULL) { // ノードが空の場合
-            node_type *temp = new_node(x);
-            if (temp == NULL) return FAILURE;
-            *pp = temp;
-            return SUCCESS;
-        } else { // ノードが空でない場合
-            if (x < (*pp)->data) return insert (x, &((*pp)->left)); // 左の子ノードに挿入
-            else if (x > (*pp)->data) return insert(x, &((*pp)->right)); // 右の子ノードに挿入
-            else {
-                (*pp)->freq++; // 既に存在するデータの出現回数を増やす
-                return SUCCESS;
-            }
-        }
-    }
-    
-    // 二分探索木からデータを削除します
-    int delete (data_type x, node_type **pp) {
-        if (*pp == NULL) return FAILURE; // ノードが空の場合
-        else if (x < (*pp)->data) { // 左の子ノードを探索
-            return delete(x, &((*pp)->left));
-        } else if (x > (*pp)->data) { // 右の子ノードを探索
-            return delete(x, &((*pp)->right));
-        } else { // ノードが見つかった場合
-            if ((*pp)->left == NULL && (*pp)->right == NULL) { // 子ノードがない場合
-                free(*pp);
-                *pp = NULL;
-                return SUCCESS;
-            } else if ((*pp)->left == NULL) { // 左の子ノードがない場合
-                node_type *temp = *pp;
-                *pp = (*pp)->right;
-                free(temp);
-                return SUCCESS;
-            } else if ((*pp)->right == NULL) { // 右の子ノードがない場合
-                node_type *temp = *pp;
-                *pp = (*pp)->left;
-                free(temp);
-                return SUCCESS;
-            } else { // 両方の子ノードがある場合
-                (*pp)->data = min((*pp)->right); // 右の子ノードの最小値を取得
-                return delete((*pp)->data, &((*pp)->right)); // 右の子ノードから最小値を削除
-            }
-        }
-    }
-    
-    // 二分探索木を中順で出力します
-    void print_in_order(node_type *p) {
-        if(p != NULL) { // ノードが空でない場合
-            print_in_order(p->left);
-            for (int i = 0; i < p->freq; i++){ // 出現回数分だけデータを出力
-                printf("%d ", p->data); // データを出力
-            }
-            print_in_order(p->right); // 右の子ノードを探索
-        }
-    }
-    
-    // プログラム終了時に、動的に割り当てたメモリを開放する処理
-    void free_tree(node_type *p) {
-        if (p != NULL) {
-            free_tree(p->left); // 左の子ノードを開放
-            free_tree(p->right); // 右の子ノードを開放
-            free(p); // ノードを開放
-        }
-    }
-    
-    int main(){
-        node_type *root; // 二分探索木のルートノード
-        initialize(&root); // ルートノードを初期化
-        int choice, x; // ユーザーの選択とデータを格納する変数
-    
-        while(TRUE) { // ユーザーが終了するまで繰り返す
-            printf("\n1. Insert\n2. Delete\n3. Exit\nEnter your choice: "); 
-            scanf("%d", &choice);
-    
-            switch(choice) {
-                case 1: // 挿入
-                    printf("Enter the number to insert: ");
-                    scanf("%d", &x);
-                    if (insert(x, &root) == SUCCESS) {
-                        printf("========================\nInsertion was successful\n");
-                        printf("Tree contents: ");
-                        print_in_order(root);
-                        printf("\n========================\n");
-                    } else {
-                        printf("Insertion failed\n");
-                    }
-                    break;
-                case 2: // 削除
-                    printf("Enter the number to delete: ");
-                    scanf("%d", &x);
-                    int result = delete(x, &root);
-                    if (result == SUCCESS) {
-                        printf("========================\nDeletion was successful\n");
-                        printf("Tree contents: ");
-                        print_in_order(root);
-                        printf("\n========================\n");
-                    } else if (result == FAILURE) {
-                        printf("NUMBER NOT FOUND\n");
-                    } else {
-                        printf("Deletion failed\n");
-                    }
-                    break;
-                case 3: // 終了
-                    printf("========================\nExiting the program.\n========================\n");
-                    free_tree(root);
-                    return 0;
-                default: // 1, 2, 3 以外の場合
-                    printf("Invalid choice. Please enter 1, 2, or 3.\n");
-            }
-        }
-    }
-\end{lstlisting}
-
-\section*{課題４の実行結果}
-\noindent\textbf{プログラムの実行結果にはいくつかの例を載せる。}\\
-\textbf{例1.挿入23, 挿入50, 挿入34, 挿入56, 挿入98, 挿入1, 挿入15, 挿入29, 挿入33, 挿入40}\\
-\textbf{実行結果：}\\
-1. Insert
-2. Delete
-3. Exit
-Enter your choice: 1
-Enter the number to insert: 23\\
-========================\\
-Insertion was successful
-Tree contents: 23 \\
-========================
-
-1. Insert
-2. Delete
-3. Exit
-Enter your choice: 1
-Enter the number to insert: 50\\
-========================\\
-Insertion was successful
-Tree contents: 23 50 \\
-========================
-
-1. Insert
-2. Delete
-3. Exit
-Enter your choice: 1
-Enter the number to insert: 34\\
-========================\\
-Insertion was successful
-Tree contents: 23 34 50 \\
-========================
-
-1. Insert
-2. Delete
-3. Exit
-Enter your choice: 1
-Enter the number to insert: 56\\
-========================\\
-Insertion was successful
-Tree contents: 23 34 50 56 \\
-========================
-
-1. Insert
-2. Delete
-3. Exit
-Enter your choice: 1
-Enter the number to insert: 98\\
-========================\\
-Insertion was successful
-Tree contents: 23 34 50 56 98 \\
-========================
-
-1. Insert
-2. Delete
-3. Exit
-Enter your choice: 1
-Enter the number to insert: 1\\
-========================\\
-Insertion was successful
-Tree contents: 1 23 34 50 56 98 \\
-========================
-
-1. Insert
-2. Delete
-3. Exit
-Enter your choice: 1
-Enter the number to insert: 15\\
-========================\\
-Insertion was successful
-Tree contents: 1 15 23 34 50 56 98 \\
-========================
-
-1. Insert
-2. Delete
-3. Exit
-Enter your choice: 1
-Enter the number to insert: 29\\
-========================\\
-Insertion was successful
-Tree contents: 1 15 23 29 34 50 56 98 \\
-========================
-
-1. Insert
-2. Delete
-3. Exit
-Enter your choice: 1
-Enter the number to insert: 33\\
-========================\\
-Insertion was successful
-Tree contents: 1 15 23 29 33 34 50 56 98 \\
-========================
-
-1. Insert
-2. Delete
-3. Exit
-Enter your choice: 1
-Enter the number to insert: 40\\
-========================\\
-Insertion was successful
-Tree contents: 1 15 23 29 33 34 40 50 56 98 \\
-========================
-\vspace*{3\baselineskip}
-
-\noindent\textbf{例２.挿入１、挿入２、挿入３、挿入４、挿入５、挿入４、挿入３、挿入２、挿入１、挿入４ （度数を保持する）}\\
-\textbf{実行結果：}\\
-1. Insert
-2. Delete
-3. Exit
-Enter your choice:  1
-Enter the number to insert: 1\\
-========================\\
-Insertion was successful
-Tree contents: 1 \\
-========================
-
-1. Insert
-2. Delete
-3. Exit
-Enter your choice: 1
-Enter the number to insert: 2\\
-========================\\
-Insertion was successful
-Tree contents: 1 2 \\
-========================
-
-1. Insert
-2. Delete
-3. Exit
-Enter your choice: 1
-Enter the number to insert: 3\\
-========================\\
-Insertion was successful
-Tree contents: 1 2 3 \\
-========================
-
-1. Insert
-2. Delete
-3. Exit
-Enter your choice: 1
-Enter the number to insert: 4\\
-========================\\
-Insertion was successful
-Tree contents: 1 2 3 4 \\
-========================
-
-1. Insert
-2. Delete
-3. Exit
-Enter your choice: 1
-Enter the number to insert: 5\\
-========================\\
-Insertion was successful
-Tree contents: 1 2 3 4 5 \\
-========================
-
-1. Insert
-2. Delete
-3. Exit
-Enter your choice: 1
-Enter the number to insert: 4\\
-========================\\
-Insertion was successful
-Tree contents: 1 2 3 4 4 5\\ 
-========================
-
-1. Insert
-2. Delete
-3. Exit
-Enter your choice: 1
-Enter the number to insert: 3\\
-========================\\
-Insertion was successful
-Tree contents: 1 2 3 3 4 4 5 \\
-========================
-
-1. Insert
-2. Delete
-3. Exit
-Enter your choice: 1
-Enter the number to insert: 2\\
-========================\\
-Insertion was successful
-Tree contents: 1 2 2 3 3 4 4 5 \\
-========================
-
-1. Insert
-2. Delete
-3. Exit
-Enter your choice: 1
-Enter the number to insert: 1\\
-========================\\
-Insertion was successful
-Tree contents: 1 1 2 2 3 3 4 4 5 \\
-========================
-
-1. Insert
-2. Delete
-3. Exit
-Enter your choice: 1
-Enter the number to insert: 4\\
-========================\\
-Insertion was successful
-Tree contents: 1 1 2 2 3 3 4 4 4 5 \\
-========================
-\vspace*{3\baselineskip}
-
-\noindent\textbf{例３.挿入１０、挿入２０、挿入３０、削除１０、挿入４０、挿入５０、挿入６０、削除２０ （データの削除）}
-実行結果：\\
-1. Insert
-2. Delete
-3. Exit
-Enter your choice: 1
-Enter the number to insert: 10\\
-========================\\
-Insertion was successful
-Tree contents: 10 \\
-========================
-
-1. Insert
-2. Delete
-3. Exit
-Enter your choice: 1
-Enter the number to insert: 20\\
-========================\\
-Insertion was successful
-Tree contents: 10 20 \\
-========================
-
-1. Insert
-2. Delete
-3. Exit
-Enter your choice: 1
-Enter the number to insert: 30\\
-========================\\
-Insertion was successful
-Tree contents: 10 20 30 \\
-========================
-
-1. Insert
-2. Delete
-3. Exit
-Enter your choice: 2
-Enter the number to delete: 10\\
-========================\\
-Deletion was successful
-Tree contents: 20 30 \\
-========================
-
-1. Insert
-2. Delete
-3. Exit
-Enter your choice: 1
-Enter the number to insert: 40\\
-========================\\
-Insertion was successful
-Tree contents: 20 30 40 \\
-========================
-
-1. Insert
-2. Delete
-3. Exit
-Enter your choice: 1
-Enter the number to insert: 50\\
-========================\\
-Insertion was successful
-Tree contents: 20 30 40 50 \\
-========================
-
-1. Insert
-2. Delete
-3. Exit
-Enter your choice: 1
-Enter the number to insert: 60\\
-========================\\
-Insertion was successful
-Tree contents: 20 30 40 50 60 \\
-========================
-
-1. Insert
-2. Delete
-3. Exit
-Enter your choice: 2
-Enter the number to delete: 20\\
-========================\\
-Deletion was successful
-Tree contents: 30 40 50 60 \\
-========================
+実装が完了したら、大貧民サーバを立ち上げゲームを実行し、ペア出しが行われている様子がわかるスクリーンショットを取得した。\\
+（サーバの実行画面中のクライアントプログラム名が Normal と表示されているか、確認した）。
 
 \newpage
 \begin{thebibliography}{99}
