--- a/week3/report3.tex
+++ b/week3/report3.tex
@@ -31,14 +31,15 @@
 \begin{document}
 \maketitle
 \section*{課題５（コンピュータ大貧民プログラムの実行状況のスクリーンショット）}
-大貧民サーバを起動し、大貧民標準クライアント（tndhm_devkit_c-20180826.tar.gzに同梱されている方）を５台起動する。\\
-サーバの実行画面（クライアント名が default と表示されている対戦画面）とグラフの画面（棒グラフか線グラフ）の計２画面のスクリーンショットを撮った。\\
+大貧民サーバを起動し、大貧民標準クライアントを５台起動する。
+サーバの実行画面（クライアント名が default と表示されている対戦画面）とグラフの画面（棒グラフか線グラフ）の計２画面のスクリーンショットを撮った。
 
+\newpage
 \section*{課題６（ペア出し機能の実装）}
-コンピュータ大貧民教育用クライアント（tndhmc-0.03.tar.gz）のディレクトリ src にある、select_cards.c などを改変し、ペア出し機能を実現した。
+コンピュータ大貧民教育用クライアントのディレクトリ src にある、ペア出し機能を実現した。
 この課題では、場にカードがない状況で、かつ提出するカードにジョーカーを含まない場合について実装した。
 
-実装が完了したら、大貧民サーバを立ち上げゲームを実行し、ペア出しが行われている様子がわかるスクリーンショットを取得した。\\
+実装が完了したら、大貧民サーバを立ち上げゲームを実行し、ペア出しが行われている様子がわかるスクリーンショットを取得した。
 （サーバの実行画面中のクライアントプログラム名が Normal と表示されているか、確認した）。
 
 \newpage
