updated until report3

--- a/week3/report3.tex
+++ b/week3/report3.tex
@@ -23,24 +23,34 @@
   lineskip=-0.5ex,
 }
 \renewcommand{\lstlistingname}{ソースコード}
-
 \title{\vspace{-3cm} プログラミング言語実験・C言語　第３回課題レポート}
 \author{I類 メディア情報学 \\\textbf{氏名：}LEORA DAVID\\\textbf{学籍番号：}2210745}
-\date{2024年04月29日}
+\date{2024年05月02日}
 
 \begin{document}
 \maketitle
+
 \section*{課題５（コンピュータ大貧民プログラムの実行状況のスクリーンショット）}
-大貧民サーバを起動し、大貧民標準クライアントを５台起動する。
-サーバの実行画面（クライアント名が default と表示されている対戦画面）とグラフの画面（棒グラフか線グラフ）の計２画面のスクリーンショットを撮った。
+大貧民サーバを起動し、大貧民標準クライアント（tndhm\_devkit\_c-20180826.tar.gzに同梱されている方）を５台起動する。
+サーバの実行画面（クライアント名が default と表示されている対戦画面）とグラフの画面（棒グラフか線グラフ）の計２画面のスクリーンショットを撮った。\\
+
+
+\section*{課題５の実行結果}
 
 \newpage
 \section*{課題６（ペア出し機能の実装）}
-コンピュータ大貧民教育用クライアントのディレクトリ src にある、ペア出し機能を実現した。
+コンピュータ大貧民教育用クライアントのディレクトリ src にある、select\_cards.c などを改変し、ペア出し機能を実現した。
 この課題では、場にカードがない状況で、かつ提出するカードにジョーカーを含まない場合について実装した。
-
 実装が完了したら、大貧民サーバを立ち上げゲームを実行し、ペア出しが行われている様子がわかるスクリーンショットを取得した。
-（サーバの実行画面中のクライアントプログラム名が Normal と表示されているか、確認した）。
+（サーバの実行画面中のクライアントプログラムが Normal と表示されているか、確認した）。\\
+
+\noindent また、実現したペア出し機能について、以下の考察を行った。\\
+１。配列をどのように使って処理をしているか。\\
+２。該当するソースコードの記述によって何故その機能が実現できているのか。\\
+
+\section*{課題６の実行結果}
+
+
 
 \newpage
 \begin{thebibliography}{99}
