--- a/week3/report3.tex
+++ b/week3/report3.tex
@@ -3,6 +3,7 @@
 \usepackage[dvipdfmx]{graphicx}
 \usepackage{comment}
 \usepackage{listings,jvlisting}
+\usepackage{verbatim}
 \usepackage{url}
 \lstset{
   basicstyle={\ttfamily},
@@ -34,8 +35,25 @@
 大貧民サーバを起動し、大貧民標準クライアント（tndhm\_devkit\_c-20180826.tar.gzに同梱されている方）を５台起動する。
 サーバの実行画面（クライアント名が default と表示されている対戦画面）とグラフの画面（棒グラフか線グラフ）の計２画面のスクリーンショットを撮った。\\
 
+\section*{課題５の実行方法}
+まず、ターミナルを起動して、「コンピュータ大貧民の実行」ページの通りの手順でサーバを起動した。各フォルダから configure を行い、make を行った。
+実行するには、以下のコマンドを実行する。ポート番号は 52745 とした。
+\begin{lstlisting}
+  $ ./tndhms -p 52745
+\end{lstlisting}
+
+\vspace*{1\baselineskip}
+
+また、標準クライアントを起動するには、同じく「コンピュータ大貧民の実行」ページの通りの手順でクライアントを起動した。
+実行するには、以下のコマンドを実行する。
+\begin{lstlisting}
+  $ ./client -p 52745 &
+\end{lstlisting}
 
 \section*{課題５の実行結果}
+
+  \includegraphics[width=\textwidth]{kadai5/1.png}
+
 
 \newpage
 \section*{課題６（ペア出し機能の実装）}
