Update report file

--- a/week3/report3.tex
+++ b/week3/report3.tex
@@ -35,14 +35,12 @@
 大貧民サーバを起動し、大貧民標準クライアント（tndhm\_devkit\_c-20180826.tar.gzに同梱されている方）を５台起動する。
 サーバの実行画面（クライアント名が default と表示されている対戦画面）とグラフの画面（棒グラフか線グラフ）の計２画面のスクリーンショットを撮った。\\
 
-\section*{課題５の実行方法}
+\section*{課題５の実行結果}
 まず、ターミナルを起動して、「コンピュータ大貧民の実行」ページの通りの手順でサーバを起動した。各フォルダから configure を行い、make を行った。
 実行するには、以下のコマンドを実行する。ポート番号は 52745 とした。
 \begin{lstlisting}
   $ ./tndhms -p 52745
 \end{lstlisting}
-
-\vspace*{1\baselineskip}
 
 また、標準クライアントを起動するには、同じく「コンピュータ大貧民の実行」ページの通りの手順でクライアントを起動した。
 実行するには、以下のコマンドを実行する。
@@ -50,23 +48,39 @@
   $ ./client -p 52745 &
 \end{lstlisting}
 
-\section*{課題５の実行結果}
+実行したサーバの実行画面と線グラフの画面のスクリーンショットを以下の図１と図２に示す。
+\begin{figure}[h]
+  \centering
+  \includegraphics[width=0.5\textwidth]{kadai5/1.png}
+  \caption{サーバの実行画面}
+\end{figure}
 
-  \includegraphics[width=\textwidth]{kadai5/1.png}
+\begin{figure}[h]
+  \centering
+  \includegraphics[width=0.5\textwidth]{kadai5/2.png}
+  \caption{線グラフの画面}
+\end{figure}
 
-
-\newpage
 \section*{課題６（ペア出し機能の実装）}
-コンピュータ大貧民教育用クライアントのディレクトリ src にある、select\_cards.c などを改変し、ペア出し機能を実現した。
+コンピュータ大貧民教育用クライアント（tndhmc-0.03.tar.gz）のディレクトリ src にある、select\_cards.c などを改変し、ペア出し機能を実現した。
 この課題では、場にカードがない状況で、かつ提出するカードにジョーカーを含まない場合について実装した。
 実装が完了したら、大貧民サーバを立ち上げゲームを実行し、ペア出しが行われている様子がわかるスクリーンショットを取得した。
-（サーバの実行画面中のクライアントプログラムが Normal と表示されているか、確認した）。\\
+（サーバの実行画面中のクライアントプログラムが Normal と表示されているかを確認した）。\\
 
 \noindent また、実現したペア出し機能について、以下の考察を行った。\\
-１。配列をどのように使って処理をしているか。\\
-２。該当するソースコードの記述によって何故その機能が実現できているのか。\\
+
 
 \section*{課題６の実行結果}
+
+
+
+\noindent\textbf{１。配列をどのように使って処理をしているか。}\\
+make\_info\_table関数は、自分の手札（my\_cards配列）にあるカードの数を集計し、その情報をinfo\_table配列に格納する。具体的には、各数字（A,2-10,J,Q,K）のカードが自分の手札に何枚あるかを計算する。
+具体的には、my\_cards配列は各カードが何枚あるかを表している。
+まず、forループを使用して各カード（3-10,J,Q,K,A,2）を順に調べる。次に、my\_cards配列の対応する要素を合計し、その結果をinfo\_table[4][i]に格納する。
+これにより、info\_table[4][i]にはmy\_cardsに各数字が何枚存在するかが格納される。このように、info\_table配列は、自分の手札にあるカードの数を格納するために使用されている。\\
+
+\noindent\textbf{２。該当するソースコードの記述によって何故その機能が実現できているのか。}\\
 
 
 
